ultimos cambios preentrega3

--- a/preentrgable1/css/styles.css
+++ b/preentrgable1/css/styles.css
@@ -79,7 +79,7 @@ h1 {
     width: 17rem;
 }
 
-/*Pagina nosotros*/    /*
+/*Pagina nosotros*/    
 .historia {
     text-align: justify;
     font-family: roboto;
@@ -90,7 +90,7 @@ h1 {
     text-align: justify;
 }
 
-/* inicio del footer */   /*
+/* inicio del footer */   
 .logo-wpp {
     width: 7rem;
 }
