--- a/preentrgable1/css/stylesCopia.css
+++ b/preentrgable1/css/stylesCopia.css
@@ -86,7 +86,9 @@ h1 {
     font-size: medium;
     margin: 1rem;
 }
-
+.iframe{
+    text-align: justify;
+}
 
 /* inicio del footer */
 .logo-wpp {
