--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -33,3 +33,9 @@ h1 {
     font-size: medium;
     margin: 1rem;
 }
+.iframe{
+    text-align: justify;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
