--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -34,8 +34,9 @@ h1 {
     margin: 1rem;
 }
 .iframe{
-    text-align: justify;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    align-content: center;
+    
 }
