--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,189 @@
-/* Error: Can't find stylesheet to import.
- *   ,
- * 6 | @import "./components/_media-query";
- *   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
- *   '
- *   scss\styles.scss 6:9  root stylesheet */
+/* estilos globales */    
+* {
+    font-family: 'Roboto', sans-serif;
+    margin: 0%;
+    padding: 0%;
+}
 
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Can't find stylesheet to import.\a   \2577 \a 6 \2502  @import \"./components/_media-query\";\d\a   \2502          ^^^^^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   scss\\styles.scss 6:9  root stylesheet";
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    color: rgb(255, 0, 0);
+}
+
+ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    flex-flow: wrap;
+    justify-content: space-around
+}
+
+/* inicio del header */      
+
+.header {
+    background-image: url(../imagenes/background.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    height: 30vh;
+    width: 100%;
+}
+
+.enlace-color {
+
+    color: white;
+}
+
+.enlace-color-2 {
+    width: 8rem;
+    height: 5rem;
+}
+
+.enlace-color-3 {
+    height: 7rem;
+    width: 5rem;
+    border-radius: 100%;
+    border: solid rgb(255, 255, 255) 0.1rem;
+}
+
+/* fin del header */
+
+/* comienzo del main */    
+.super-picada {
+    size: 5rem;
+}
+
+h1 {
+    font-size: 2rem;
+    text-align: center;
+}
+
+.contenedor-imagenes {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+    text-align: center;
+    margin-top: 5rem;
+}
+
+.destacado-1 {
+    margin-top: 1rem;
+}
+
+.imagen-principal {
+    height: 17rem;
+    width: 17rem;
+}
+
+/*Pagina nosotros*/    
+.historia {
+    text-align: justify;
+    font-family: roboto;
+    font-size: medium;
+    margin: 1rem;
+}
+.iframe{
+    text-align: justify;
+}
+
+/* inicio del footer */   
+.logo-wpp {
+    width: 7rem;
+}
+
+.logo-face {
+    width: 7rem;
+}
+
+.bandera-italia {
+    width: 7rem;
+}
+
+.logo-insta {
+    width: 7rem;
+}
+
+.footer {
+    padding-top: 3rem;
+}
+
+.contacto {
+    text-align: center;
+}
+
+.imagenes-footer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.div-footer {
+    display: block;
+}
+
+/* fin del footer */
+
+/*Media Query*/     
+
+@media only screen and (min-width:320px) {
+    .card-producto {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        gap: 1rem;
+    }
+
+}
+
+@media only screen and (min-width:600px) and (max-width:960px) {
+    .card-producto {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        gap: 1rem;
+    }
+
+    .contenedor-imagenes {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        border: rgb(64, 224, 208) solid 1px;
+    }
+
+    .text-danger {
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+    }
+}
+
+@media only screen and (min-width:961px) {
+    .card-producto {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        gap: 1rem;
+    }
+
+    .contenedor-imagenes {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        border: rgb(64, 224, 208) solid 1px;
+    }
+
+    .text-danger {
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+    }
 }
