--- a/css/styles.css
+++ b/css/styles.css
@@ -1,189 +1,172 @@
-/* estilos globales */    
-* {
-    font-family: 'Roboto', sans-serif;
-    margin: 0%;
-    padding: 0%;
+.footer {
+  padding-top: 3rem;
 }
-
-
-a {
-    text-decoration: none;
+.footer .contacto {
+  text-align: center;
 }
-
-a:hover {
-    color: rgb(255, 0, 0);
+.footer .imagenes-footer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
 }
-
-ul {
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-    flex-flow: wrap;
-    justify-content: space-around
+.footer .div-footer {
+  display: block;
 }
-
-/* inicio del header */      
+.footer .logo-insta {
+  width: 7rem;
+}
+.footer .logo-wpp {
+  width: 7rem;
+}
+.footer .logo-face {
+  width: 7rem;
+}
+.footer .bandera-italia {
+  width: 7rem;
+}
 
 .header {
-    background-image: url(../imagenes/background.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    height: 30vh;
-    width: 100%;
+  background-image: url(../imagenes/background.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 30vh;
+  width: 100%;
 }
-
-.enlace-color {
-
-    color: white;
+.header .enlace-color {
+  color: white;
 }
-
-.enlace-color-2 {
-    width: 8rem;
-    height: 5rem;
+.header .enlace-color-2 {
+  width: 8rem;
+  height: 5rem;
 }
-
-.enlace-color-3 {
-    height: 7rem;
-    width: 5rem;
-    border-radius: 100%;
-    border: solid rgb(255, 255, 255) 0.1rem;
-}
-
-/* fin del header */
-
-/* comienzo del main */    
-.super-picada {
-    size: 5rem;
-}
-
-h1 {
-    font-size: 2rem;
-    text-align: center;
+.header .enlace-color-3 {
+  height: 5rem;
+  width: 5rem;
+  border-radius: 100%;
+  border: solid rgb(255, 255, 255) 0.1rem;
 }
 
 .contenedor-imagenes {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  text-align: center;
+  margin-top: 5rem;
+}
+.contenedor-imagenes .destacado-1 {
+  margin-top: 1rem;
+}
+.contenedor-imagenes .imagen-principal {
+  height: 17rem;
+  width: 17rem;
+}
+
+/*Pagina nosotros*/
+.historia {
+  text-align: justify;
+  font-family: roboto;
+  font-size: medium;
+  margin: 1rem;
+}
+
+.iframe {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-content: center;
+}
+
+h1 {
+  font-size: 2rem;
+  text-align: center;
+}
+
+h2 {
+  font-family: Roboto;
+  color: rgb(103, 103, 192);
+}
+
+h3 {
+  font-family: Roboto;
+  font-size: x-large;
+  text-decoration: underline;
+  color: rgb(0, 0, 0);
+}
+
+/*Media Query*/
+@media only screen and (min-width: 320px) {
+  .card-producto {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    align-content: center;
-    text-align: center;
-    margin-top: 5rem;
+    justify-content: space-around;
+    gap: 1rem;
+  }
 }
-
-.destacado-1 {
-    margin-top: 1rem;
-}
-
-.imagen-principal {
-    height: 17rem;
-    width: 17rem;
-}
-
-/*Pagina nosotros*/    
-.historia {
-    text-align: justify;
-    font-family: roboto;
-    font-size: medium;
-    margin: 1rem;
-}
-.iframe{
-    text-align: justify;
-}
-
-/* inicio del footer */   
-.logo-wpp {
-    width: 7rem;
-}
-
-.logo-face {
-    width: 7rem;
-}
-
-.bandera-italia {
-    width: 7rem;
-}
-
-.logo-insta {
-    width: 7rem;
-}
-
-.footer {
-    padding-top: 3rem;
-}
-
-.contacto {
-    text-align: center;
-}
-
-.imagenes-footer {
+@media only screen and (min-width: 600px) and (max-width: 960px) {
+  .card-producto {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 1rem;
+  }
+  .contenedor-imagenes {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-evenly;
+    border: rgb(64, 224, 208) solid 1px;
+  }
+  .text-danger {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+}
+@media only screen and (min-width: 961px) {
+  .card-producto {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: space-around;
-    align-items: center;
+    gap: 1rem;
+  }
+  .contenedor-imagenes {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    border: rgb(64, 224, 208) solid 1px;
+  }
+  .text-danger {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+}
+/* estilos globales */
+* {
+  font-family: "Roboto", sans-serif;
+  margin: 0%;
+  padding: 0%;
 }
 
-.div-footer {
-    display: block;
+a {
+  text-decoration: none;
 }
 
-/* fin del footer */
-
-/*Media Query*/     
-
-@media only screen and (min-width:320px) {
-    .card-producto {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        gap: 1rem;
-    }
-
+a:hover {
+  color: rgb(255, 0, 0);
 }
 
-@media only screen and (min-width:600px) and (max-width:960px) {
-    .card-producto {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        gap: 1rem;
-    }
-
-    .contenedor-imagenes {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        border: rgb(64, 224, 208) solid 1px;
-    }
-
-    .text-danger {
-        margin-top: 2rem;
-        margin-bottom: 2rem;
-    }
+ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  flex-flow: wrap;
+  justify-content: space-around;
 }
 
-@media only screen and (min-width:961px) {
-    .card-producto {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        gap: 1rem;
-    }
-
-    .contenedor-imagenes {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        border: rgb(64, 224, 208) solid 1px;
-    }
-
-    .text-danger {
-        margin-top: 2rem;
-        margin-bottom: 2rem;
-    }
-}
+/*# sourceMappingURL=styles.css.map */
