--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,7 +1,9 @@
 @import "./base/listas";
 @import "./base/variables";
-@import "./components/_footer.scss";
+@import "./components/footer";
 @import "./components/header";
 @import "./components/main";
-@import "./components/_media-query";
-@import "./components/_estilos-globales";
+@import "./components/media-query";
+@import "./components/estilos-globales";
+
+
